mcfootball-generator/src/test/resources/football/invalid/LongCountryName.fb
/* Invalid — triggers 0xFC021: country name > 40 characters.
 * "AbcdefghijAbcdefghijAbcdefghijAbcdefghijX" = 41 chars.
 * Also used in navigation to satisfy 0xFC004 / 0xFC009.
 */
footballsite LongCountryNameTest {

  navigation { AbcdefghijAbcdefghijAbcdefghijAbcdefghijX; }

  country AbcdefghijAbcdefghijAbcdefghijAbcdefghijX {
    league TestLeague season "2025-2026" {
      match {
        date    "2025-09-01"
        time    "15:00"
        home    "Team Alpha"   ("CityA")
        away    "Team Beta"    ("CityB")
        score   1 - 0
        stadium "Test Arena"
      }
    }
  }

}
